DEV-309: Added remaining tests, fixed all issues in code, removed empty lines and modified README.md. .